--- a/conferencia.html
+++ b/conferencia.html
@@ -56,6 +56,8 @@
         Pagar agora com Mercado Livre
       </a>
     </div>
+
+    <h1>OBS: Se após preencher, aparecer "Erro ao enviar. Tente novamente.", pode ficar tranquila que foi tudo certo, estamos solucionando o problema o mais rapido possivel! :)</h1>
   </section>
 </body>
 
